# PeptideScreener

./: .gitignore  README.md  app.py  pyproject.toml
docs/: screener_implementation.md
docs/screeners/: jana_solpred.md  will_solpred.md
src/: config.py  screener_manager.py
src/screeners/: screener.py
src/screeners/solubility/: janas_model.pkl  screener_solubility.py  screener_solubility_jana.py  screener_solubility_opt.py  screener_solubility_will.py  williams_model.joblib
src/screeners/toxicity/: cytotoxicity_screener.py  f_cytotox.py
static/css/: style.css
templates/: main_page.html  results.html
