[project]
name = "mmwt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "joblib>=1.5.3",
    "localcider>=0.1.21",
    "pandas>=3.0.1",
    "protobuf>=6.33.5",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "sparrow",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
sparrow = { git = "https://github.com/idptools/sparrow.git" }
